--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.text{
+  width: 100%;
+  height: 100%;
+  font-size: 60vw;
+  color: cornflowerblue;
+}
